--- a/shareit-server/src/main/resources/application.properties
+++ b/shareit-server/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.sql.init.mode=always
 
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.defer-datasource-initialization=true
 
 logging.level.org.springframework.orm.jpa=INFO
