--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
   gateway:
     build:
       dockerfile: Dockerfile
-      context: ./shareit-gateway
+      context: ./gateway
     image: shareit_gateway_image
     container_name: shareit_gateway_container
     ports:
@@ -22,7 +22,7 @@ services:
   server:
     build:
       dockerfile: Dockerfile
-      context: ./shareit-server
+      context: ./server
     image: shareit_server_image
     container_name: shareit_server_container
     ports:
@@ -41,7 +41,7 @@ services:
     image: postgres:13.7-alpine
     container_name: shareit_db_container
     ports:
-      - "6541:5432"
+      - "6541:5432" # внешний:внутренний
     # volume и связанная с ним директория в контейнере
     volumes:
       - /var/lib/postgresql/data/
