--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -10,7 +10,7 @@
 
     <artifactId>shareit-gateway</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>shareit-gateway</name>
+    <name>ShareIt Gateway</name>
 
 
     <dependencies>
